cabal-version:       >=1.10

name:                Advent
version:             0.1.0.0
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable Day1
  main-is:             Day1.hs
  build-depends:       base >=4.12 && <4.13
                     , text
  default-language:    Haskell2010

executable Day2
  main-is:             Day2.hs
  build-depends:       base >=4.12 && <4.13
                     , text
                     , vector
  default-language:    Haskell2010