cabal-version:       >=1.10

name:                Advent
version:             0.1.0.0
build-type:          Simple
extra-source-files:  CHANGELOG.md

library 
  exposed-modules:     IntcodeComputer
  hs-source-dirs:      lib
  build-depends:       base >=4.12 && <4.13
                     , text
                     , vector
                     , containers
  default-language:    Haskell2010
  ghc-options:         -Wall

executable Day1
  main-is:             Main.hs
  hs-source-dirs:      Day1
  build-depends:       base >=4.12 && <4.13
                     , text
  default-language:    Haskell2010
  ghc-options:         -Wall

executable Day2
  main-is:             Main.hs
  hs-source-dirs:      Day2
  build-depends:       base >=4.12 && <4.13
                     , text
                     , vector
                     , Advent
  default-language:    Haskell2010
  ghc-options:         -Wall

executable Day3
  main-is:             Main.hs
  hs-source-dirs:      Day3
  build-depends:       base >=4.12 && <4.13
                     , text
                     , vector
                     , containers
  default-language:    Haskell2010
  ghc-options:         -Wall

executable Day4
  main-is:             Main.hs
  hs-source-dirs:      Day4
  build-depends:       base >=4.12 && <4.13
                     , text
                     , vector
                     , containers
  default-language:    Haskell2010
  ghc-options:         -Wall

executable Day5
  main-is:             Main.hs
  hs-source-dirs:      Day5
  build-depends:       base >=4.12 && <4.13
                     , text
                     , vector
                     , Advent
  default-language:    Haskell2010
  ghc-options:         -Wall

executable Day6
  main-is:             Main.hs
  hs-source-dirs:      Day6
  build-depends:       base >=4.12 && <4.13
                     , text
                     , containers
  default-language:    Haskell2010
  ghc-options:         -Wall

executable Day7
  main-is:             Main.hs
  hs-source-dirs:      Day7
  build-depends:       base >=4.12 && <4.13
                     , text
                     , vector
                     , Advent
  default-language:    Haskell2010
  ghc-options:         -Wall